--- a/hello-world/src/main/resources/com/atlassian/tutorial/hello-world.properties
+++ b/hello-world/src/main/resources/com/atlassian/tutorial/hello-world.properties
@@ -1,12 +1,12 @@
 
 hello-world-section.label=Hello World Section
 hello-world-section.name=Hello World Section
-hello-world-section.description=The Hello World Section Plugin
+hello-world-section.description=The Hello World Section Description
 
 hello-world-menu.label=Hello World Menu
 hello-world-menu.name=Hello World Menu
-hello-world-menu.description=The Hello World Menu Plugin
+hello-world-menu.description=The Hello World Menu Description
 
 hello-world-item.label=Hello World Item
 hello-world-item.name=Hello World Item
-hello-world-item.description=Hello World Item Plugin
+hello-world-item.description=Hello World Item Description
