--- a/hello-world/src/main/resources/com/atlassian/tutorial/hello-world.properties
+++ b/hello-world/src/main/resources/com/atlassian/tutorial/hello-world.properties
@@ -1,12 +1,20 @@
 
-hello-world-section.label=Hello World Section
-hello-world-section.name=Hello World Section
+hello-world-section.label=Hello World Section Label
+hello-world-section.name=Hello World Section Name
 hello-world-section.description=The Hello World Section Description
 
-hello-world-menu.label=Hello World Menu
-hello-world-menu.name=Hello World Menu
+hello-world-menu.label=Hello World Menu Label
+hello-world-menu.name=Hello World Menu Name
 hello-world-menu.description=The Hello World Menu Description
 
-hello-world-item.label=Hello World Item
-hello-world-item.name=Hello World Item
-hello-world-item.description=Hello World Item Description
+hello-world-item-1.label=Hello World Item 1 Label
+hello-world-item-1.name=Hello World Item 1 Name
+hello-world-item-1.description=Hello World Item 1 Description
+
+hello-world-item-2.label=Hello World Item 2 Label
+hello-world-item-2.name=Hello World Item 2 Name
+hello-world-item-2.description=Hello World Item 2 Description
+
+hello-world-item-3.label=Hello World Item 3 Label
+hello-world-item-3.name=Hello World Item 3 Name
+hello-world-item-3.description=Hello World Item 3 Description
