--- a/webwork-sample/src/main/resources/com/consultingtoolsmiths/jira/samples/mypluginstrings.properties
+++ b/webwork-sample/src/main/resources/com/consultingtoolsmiths/jira/samples/mypluginstrings.properties
@@ -3,6 +3,8 @@
 
 com.consultingtoolsmiths.jira.samples.webwork.section.label=Samples
 
+com.consultingtoolsmiths.jira.samples.webwork.message.action.label.1=Message Action
+com.consultingtoolsmiths.jira.samples.webwork.message.action.label.2=Message Command
 com.consultingtoolsmiths.jira.samples.webwork.label1=First Action
 com.consultingtoolsmiths.jira.samples.webwork.label2=First Action default
 com.consultingtoolsmiths.jira.samples.webwork.label3=First Action default with parameters
