--- a/webwork-sample/pom.xml
+++ b/webwork-sample/pom.xml
@@ -5,7 +5,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.consultingtoolsmiths.jira.samples</groupId>
+    <groupId>com.pduleba.jira.action</groupId>
     <artifactId>webwork-sample</artifactId>
     <version>5.2</version>
 
