--- a/webwork-sample/pom.xml
+++ b/webwork-sample/pom.xml
@@ -28,6 +28,12 @@
             <version>${jira.version}</version>
             <scope>provided</scope>
         </dependency>        
+		<dependency>
+			<groupId>com.atlassian.jira</groupId>
+			<artifactId>jira-core</artifactId>
+			<version>${jira.version}</version>
+			<scope>provided</scope>
+		</dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
