--- a/webwork-sample/src/main/resources/com/pduleba/jira/action/config.properties
+++ b/webwork-sample/src/main/resources/com/pduleba/jira/action/config.properties
@@ -1,12 +1,7 @@
 # This is a properties file and is used to store the local translation
 # of strings displayed by a plugin.
 
-com.pduleba.jira.action.message.section.label=Webwork Samples
+com.pduleba.jira.actions.admin.menu.label=Jira admin menu actions
 
-com.pduleba.jira.action.message.action.label.1=Message Action 1
-com.pduleba.jira.action.message.action.label.2=Message Command 1
-
-com.pduleba.jira.action.notification.action.label.1=Notification Action 1
-com.pduleba.jira.action.notification.action.label.2=Notification Action 2
-
-com.pduleba.jira.view.message=View Message
+com.pduleba.jira.action.success.label=ExecuteSuccessAction
+com.pduleba.jira.action.error.label=ExecuteErrorAction
